--- a/infrastructure/mysql/environments/dev-values.yaml
+++ b/infrastructure/mysql/environments/dev-values.yaml
@@ -42,7 +42,9 @@ initdbScripts:
       ('PixelMage', 'ASIA', 28, 150, 47.00, 29.7, 'Capture the Flag', '2025-09-18 14:02:00'),
       ('IronFist', 'EU', 35, 210, 52.10, 33.1, 'Deathmatch', '2025-09-20 01:20:00'),
       ('CyberWolf', 'SA', 50, 400, 61.35, 40.8, 'Survival', '2025-09-17 19:10:00');
+
   grants.sql: |
-    CREATE USER IF NOT EXISTS 'devuser'@'%' IDENTIFIED BY 'devpass123';
+    CREATE USER IF NOT EXISTS 'devuser'@'%' IDENTIFIED WITH caching_sha2_password BY 'devpass123';
     GRANT ALL PRIVILEGES ON devdb.* TO 'devuser'@'%';
     FLUSH PRIVILEGES;
+
