--- a/infrastructure/mysql/templates/backup-cronjob.yaml
+++ b/infrastructure/mysql/templates/backup-cronjob.yaml
@@ -10,7 +10,8 @@ spec:
         spec:
           containers:
             - name: mysql-backup
-              image: bitnami/mysql:8.0
+              image: "{{ .Values.mysql.image.repository }}:{{ .Values.mysql.image.tag }}"
+              imagePullPolicy: { { .Values.mysql.image.pullPolicy | default "IfNotPresent" } }
               command:
                 - sh
                 - -c
@@ -25,13 +26,13 @@ spec:
                 - name: MYSQL_PASSWORD
                   valueFrom:
                     secretKeyRef:
-                      name: {{ .Values.auth.existingSecret }}
-                      key: rootPassword
+                      name: {{ .Values.mysql.auth.existingSecret }}
+                      key: {{ .Values.mysql.auth.secretKeys.rootPasswordKey }}
                 - name: MYSQL_DATABASE
                   valueFrom:
                     secretKeyRef:
-                      name: {{ .Values.auth.existingSecret }}
-                      key: database
+                      name: {{ .Values.mysql.auth.existingSecret }}
+                      key: {{ .Values.mysql.auth.secretKeys.databaseKey }}
               volumeMounts:
                 - name: backup-storage
                   mountPath: /backup
