--- a/infrastructure/mysql/templates/backup-cronjob.yaml
+++ b/infrastructure/mysql/templates/backup-cronjob.yaml
@@ -10,29 +10,33 @@ spec:
         spec:
           containers:
             - name: mysql-backup
-              image: "{{ .Values.mysql.image.repository }}:{{ .Values.mysql.image.tag }}"
-              imagePullPolicy: { { .Values.mysql.image.pullPolicy | default "IfNotPresent" } }
+              image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+              imagePullPolicy: {{ .Values.image.pullPolicy | default "IfNotPresent" }}
               command:
                 - sh
                 - -c
-                - "mysqldump -h mysql.${ENVIRONMENT}.svc.cluster.local -u${MYSQL_USER} -p${MYSQL_PASSWORD} ${MYSQL_DATABASE} > /backup/db-$(date +%F-%H-%M).sql"
+                - >
+                  mysqldump -h {{ .Release.Name }}.{{ .Release.Namespace }}.svc.cluster.local
+                  -u${MYSQL_USER}
+                  -p${MYSQL_PASSWORD}
+                  ${MYSQL_DATABASE}
+                  > /backup/db-$(date +%F-%H-%M).sql
               env:
-                - name: ENVIRONMENT
-                  valueFrom:
-                    fieldRef:
-                      fieldPath: metadata.namespace
                 - name: MYSQL_USER
-                  value: root
+                  valueFrom:
+                    secretKeyRef:
+                      name: {{ .Values.auth.existingSecret }}
+                      key: {{ .Values.auth.secretKeys.usernameKey }}
                 - name: MYSQL_PASSWORD
                   valueFrom:
                     secretKeyRef:
-                      name: {{ .Values.mysql.auth.existingSecret }}
-                      key: {{ .Values.mysql.auth.secretKeys.rootPasswordKey }}
+                      name: {{ .Values.auth.existingSecret }}
+                      key: {{ .Values.auth.secretKeys.passwordKey }}
                 - name: MYSQL_DATABASE
                   valueFrom:
                     secretKeyRef:
-                      name: {{ .Values.mysql.auth.existingSecret }}
-                      key: {{ .Values.mysql.auth.secretKeys.databaseKey }}
+                      name: {{ .Values.auth.existingSecret }}
+                      key: {{ .Values.auth.secretKeys.databaseKey }}
               volumeMounts:
                 - name: backup-storage
                   mountPath: /backup
