--- a/infrastructure/mysql/templates/pvc-backup.yaml
+++ b/infrastructure/mysql/templates/pvc-backup.yaml
@@ -1,9 +1,11 @@
-volumeClaimTemplates:
-  - metadata:
-      name: data
-    spec:
-      accessModes: ["ReadWriteOnce"]
-      resources:
-        requests:
-          storage: {{ .Values.persistence.size | default "1Gi" }}
-      storageClassName: local-path
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: {{ .Release.Name }}-backups
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
+  storageClassName: local-path
