--- a/applications/vyking-app/environments/values-prod.yaml
+++ b/applications/vyking-app/environments/values-prod.yaml
@@ -2,17 +2,20 @@ global:
   environment: prod
 
 frontend:
+  enabled: true
   namespace: frontend-prod
-  replicaCount: 2
   image:
     tag: prod
+  service:
+    port: 8080
+    targetPort: 8081
   ingress:
     enabled: true
     className: nginx
     annotations:
       kubernetes.io/ingress.class: nginx
     hosts:
-      - host: frontend-prod.example.com
+      - host: frontend.example.com
         paths:
           - path: /
             pathType: Prefix
@@ -22,50 +25,52 @@ frontend:
             pathType: Prefix
             service:
               component: backend
+              port: 8081
     tls:
       - secretName: frontend-tls-prod
         hosts:
-          - frontend-prod.example.com
+          - frontend.example.com
   hpa:
     enabled: true
     minReplicas: 2
     maxReplicas: 5
-    cpuUtilization: 60
-    memoryUtilization: 75
+    cpuUtilization: 70
+    memoryUtilization: 80
   backendService:
     host: backend-backend.backend-prod.svc.cluster.local
     port: 8081
 
 backend:
+  enabled: true
   namespace: backend-prod
-  replicaCount: 2
   image:
     tag: prod
-  service:
-    port: 8081
   mysql:
-    host: mysql-prod
     secretName: mysql-credentials-prod
+  ingress:
+    enabled: true
+    host: frontend.example.com
   resources:
     requests:
       cpu: 200m
-      memory: 128Mi
+      memory: 256Mi
     limits:
-      cpu: 500m
+      cpu: 1000m
       memory: 512Mi
   probes:
     liveness:
       path: /health
       port: 8081
-      initialDelaySeconds: 5
+      initialDelaySeconds: 10
+      periodSeconds: 15
+      timeoutSeconds: 3
+      failureThreshold: 3
     readiness:
       path: /health
       port: 8081
-      initialDelaySeconds: 3
-  hpa:
-    minReplicas: 2
-    maxReplicas: 5
-    cpuUtilization: 70
-    memoryUtilization: 70
+      initialDelaySeconds: 20
+      periodSeconds: 10
+      timeoutSeconds: 3
+      failureThreshold: 5
   labels:
     environment: prod
