--- a/infrastructure/mysql/templates/backup-cronjob.yaml
+++ b/infrastructure/mysql/templates/backup-cronjob.yaml
@@ -10,7 +10,8 @@ spec:
         spec:
           containers:
             - name: mysql-backup
-              image: {{ .Values.backup.image }}
+              image: docker.io/bitnami/mysql:8.0.39-debian-12-r1
+
               command:
                 - sh
                 - -c
