--- a/applications/vyking-app/environments/values-backend-dev.yaml
+++ b/applications/vyking-app/environments/values-backend-dev.yaml
@@ -2,38 +2,10 @@ global:
   environment: dev
 
 frontend:
-  namespace: frontend-dev
-  replicaCount: 1
-  image:
-    repository: vyking-frontend
-    tag: dev
-    pullPolicy: IfNotPresent
-  service:
-    port: 8080
-    targetPort: 80
-  ingress:
-    enabled: true
-    annotations:
-      kubernetes.io/ingress.class: nginx
-    hosts:
-      - host: frontend-dev.local
-        paths:
-          - path: /
-            pathType: Prefix
-          - path: /api
-            pathType: Prefix
-    tls:
-      - secretName: frontend-tls-dev
-        hosts:
-          - frontend-dev.local
-  hpa:
-    enabled: true
-    minReplicas: 1
-    maxReplicas: 3
-    cpuUtilization: 70
-    memoryUtilization: 80
+  enabled: false
 
 backend:
+  enabled: true
   namespace: backend-dev
   replicaCount: 1
   image:
@@ -51,7 +23,7 @@ backend:
       memory: 128Mi
     limits:
       cpu: 500m
-      memory: 128Mi
+      memory: 256Mi
   probes:
     liveness:
       path: /health
@@ -78,5 +50,3 @@ backend:
     app.kubernetes.io/name: backend
     app.kubernetes.io/part-of: vyking-app
     environment: dev
-
-
