--- a/infrastructure/mysql/environments/dev-values.yaml
+++ b/infrastructure/mysql/environments/dev-values.yaml
@@ -16,7 +16,13 @@ resources:
     memory: 512Mi
 
 primary:
+  extraFlags: "--default-authentication-plugin=mysql_native_password"
+  configuration: |
+    [mysqld]
+    skip-name-resolve
+    default_authentication_plugin=mysql_native_password
+    # Allow root from outside localhost
+    [client]
+    host=%
   persistence:
     size: 8Gi
-
-
