--- a/infrastructure/mysql/environments/dev-values.yaml
+++ b/infrastructure/mysql/environments/dev-values.yaml
@@ -17,12 +17,6 @@ resources:
 
 primary:
   extraFlags: "--default-authentication-plugin=mysql_native_password"
-  configuration: |
-    [mysqld]
-    skip-name-resolve
-    default_authentication_plugin=mysql_native_password
-    # Allow root from outside localhost
-    [client]
-    host=%
+  initdbScriptsConfigMap: mysql-init
   persistence:
     size: 8Gi
