--- a/infrastructure/mysql/environments/dev-values.yaml
+++ b/infrastructure/mysql/environments/dev-values.yaml
@@ -1,6 +1,10 @@
 auth:
   existingSecret: mysql-dev-secret
-
+  secretKeys:
+    rootPassword: "mysql-root-password"
+    username: "mysql-username"
+    password: "mysql-password"
+    database: "mysql-database"
 backup:
   schedule: "0 */48 * * *"   # every 2 days
   pvc: mysql-backups
