--- a/infrastructure/mysql/environments/prod-values.yaml
+++ b/infrastructure/mysql/environments/prod-values.yaml
@@ -1,5 +1,10 @@
 auth:
-  existingSecret: mysql-dev-secret
+  existingSecret: mysql-prod-secret
+  secretKeys:
+    rootPassword: "mysql-root-password"
+    username: "mysql-username"
+    password: "mysql-password"
+    database: "mysql-database"
 
 resources:
   requests:
@@ -15,13 +20,5 @@ backup:
   pvc: mysql-backups
 
 primary:
-  extraFlags: "--default-authentication-plugin=mysql_native_password"
-  configuration: |
-    [mysqld]
-    skip-name-resolve
-    default_authentication_plugin=mysql_native_password
-    # Allow root from outside localhost
-    [client]
-    host=%
   persistence:
     size: 8Gi
