--- a/applications/vyking-app/templates/frontend/deployment-service.yaml
+++ b/applications/vyking-app/templates/frontend/deployment-service.yaml
@@ -29,6 +29,7 @@ spec:
       containers:
         - name: frontend
           image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
+          imagePullPolicy: {{ .Values.frontend.image.pullPolicy }}
           ports:
             - containerPort: {{ default 80 $frontend.service.targetPort }}
           volumeMounts:
