--- a/applications/vyking-app/environments/values-backend-prod.yaml
+++ b/applications/vyking-app/environments/values-backend-prod.yaml
@@ -11,7 +11,7 @@ backend:
   image:
     repository: vyking-backend
     tag: prod
-    pullPolicy: never
+    pullPolicy: Never
   mysql:
     secretName: mysql-credentials-prod
   ingress:
