--- a/applications/vyking-app/environments/values-frontend-prod.yaml
+++ b/applications/vyking-app/environments/values-frontend-prod.yaml
@@ -7,7 +7,7 @@ frontend:
   image:
     repository: vyking-frontend
     tag: prod
-    pullPolicy: never
+    pullPolicy: Never
   service:
     port: 8080
     targetPort: 80
