--- a/applications/vyking-app/templates/backend/deployment-service.yaml
+++ b/applications/vyking-app/templates/backend/deployment-service.yaml
@@ -31,7 +31,7 @@ spec:
       containers:
         - name: backend
           image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
-          imagePullPolicy: { { .Values.backend.image.pullPolicy } }
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: {{ $backend.service.port }}
           env:
