--- a/applications/vyking-app/environments/values-backend-dev.yaml
+++ b/applications/vyking-app/environments/values-backend-dev.yaml
@@ -11,7 +11,7 @@ backend:
   image:
     repository: vyking-backend
     tag: dev
-    pullPolicy: Never
+    pullPolicy: IfNotPresent
   mysql:
     secretName: mysql-credentials-dev
   ingress:
