--- a/applications/vyking-app/templates/frontend/deployment-service.yaml
+++ b/applications/vyking-app/templates/frontend/deployment-service.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
+          image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
           imagePullPolicy: {{ .Values.backend.image.pullPolicy }}
 
           ports:
