--- a/infrastructure/mysql/environments/dev-values.yaml
+++ b/infrastructure/mysql/environments/dev-values.yaml
@@ -24,3 +24,11 @@ primary:
   initdbScriptsConfigMap: mysql-init
   persistence:
     size: 8Gi
+  startupProbe:
+    enabled: false
+  livenessProbe:
+    enabled: false
+  readinessProbe:
+    enabled: false
+
+
