--- a/applications/vyking-app/templates/frontend/deployment-service.yaml
+++ b/applications/vyking-app/templates/frontend/deployment-service.yaml
@@ -28,9 +28,8 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: { { .Values.image.pullPolicy } }
-
+          image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
+          imagePullPolicy: {{ .Values.frontend.image.pullPolicy | quote }}
           ports:
             - containerPort: {{ default 80 $frontend.service.targetPort }}
           volumeMounts:
