--- a/applications/vyking-app/templates/backend/deployment-service.yaml
+++ b/applications/vyking-app/templates/backend/deployment-service.yaml
@@ -30,8 +30,8 @@ spec:
     spec:
       containers:
         - name: backend
-          image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
-          imagePullPolicy: {{ .Values.backend.image.pullPolicy | quote }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ $backend.service.port }}
           env:
