--- a/applications/vyking-app/templates/frontend/deployment-service.yaml
+++ b/applications/vyking-app/templates/frontend/deployment-service.yaml
@@ -36,6 +36,7 @@ spec:
             - name: nginx-config
               mountPath: /etc/nginx/conf.d/default.conf
               subPath: default.conf
+              readOnly: true
           env:
             - name: BACKEND_URL
               value: "http://{{ $backendHost }}:{{ $backendPort }}"
@@ -56,7 +57,7 @@ spec:
       volumes:
         - name: nginx-config
           configMap:
-            name: {{ printf "%s-nginx-config" $name }}
+            name: { { printf "%s-nginx-config" $name } }
             items:
               - key: default.conf
                 path: default.conf
