--- a/infrastructure/mysql/environments/dev-values.yaml
+++ b/infrastructure/mysql/environments/dev-values.yaml
@@ -14,13 +14,20 @@ backup:
 
 resources:
   requests:
-    cpu: 100m
-    memory: 256Mi
-  limits:
-    cpu: 500m
+    cpu: 250m
     memory: 512Mi
+  limits:
+    cpu: 1000m
+    memory: 1024Mi
 
 primary:
+  configuration: |-
+    [mysqld]
+    default_authentication_plugin=mysql_native_password
+    max_connections=1000
+    connect_timeout=60
+    net_read_timeout=60
+    net_write_timeout=60
   persistence:
     size: 8Gi
   initContainers:
@@ -29,16 +36,52 @@ primary:
       command: ['bash', '-c']
       args:
         - |
-          # Wait for MySQL to be ready
           while ! mysql -h mysql -uroot -p${MYSQL_ROOT_PASSWORD} -e "SELECT 1"; do
             sleep 5
           done
-          # Run initialization scripts
           mysql -h mysql -uroot -p${MYSQL_ROOT_PASSWORD} < /scripts/init.sql
       volumeMounts:
         - name: init-scripts
           mountPath: /scripts
-  extraVolumes:
-    - name: init-scripts
-      configMap:
-        name: mysql-init
+        - name: data-scripts
+          mountPath: /data-scripts
+      extraVolumes:
+        - name: init-scripts
+          configMap:
+            name: mysql-init
+        - name: data-scripts
+          configMap:
+            name: data-init
+  startupProbe:
+    enabled: true
+    initialDelaySeconds: 30
+    periodSeconds: 10
+    timeoutSeconds: 5
+    failureThreshold: 15
+    command:
+      - bash
+      - -c
+      - |
+        mysqladmin ping -uroot -p${MYSQL_ROOT_PASSWORD} --silent
+  livenessProbe:
+    enabled: true
+    initialDelaySeconds: 120
+    periodSeconds: 10
+    timeoutSeconds: 5
+    failureThreshold: 3
+    command:
+      - bash
+      - -c
+      - |
+        mysqladmin ping -uroot -p${MYSQL_ROOT_PASSWORD} --silent
+  readinessProbe:
+    enabled: true
+    initialDelaySeconds: 30
+    periodSeconds: 5
+    timeoutSeconds: 3
+    failureThreshold: 3
+    command:
+      - bash
+      - -c
+      - |
+        mysqladmin ping -uroot -p${MYSQL_ROOT_PASSWORD} --silent
