--- a/applications/backend/app/Dockerfile
+++ b/applications/backend/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11-slim-bullseye
+FROM python:3.11-alpine
 
 # Install build dependencies for mysqlclient
 RUN apt-get update && apt-get install -y \
@@ -9,12 +9,6 @@ RUN apt-get update && apt-get install -y \
   && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
-
 COPY requirements.txt .
-
-RUN pip install --upgrade pip \
- && pip install --no-cache-dir -r requirements.txt
-
+RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
 COPY app.py .
-
-CMD ["python", "app.py"]
