--- a/applications/frontend/app/Dockerfile
+++ b/applications/frontend/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:1.25-alpine
+FROM nginx:latest
 
 COPY index.html /usr/share/nginx/html/index.html
 COPY app.js /usr/share/nginx/html/app.js
