--- a/applications/vyking-app/values.yaml
+++ b/applications/vyking-app/values.yaml
@@ -79,8 +79,11 @@ backend:
   ingress:
     enabled: false
     annotations:
-      nginx.ingress.kubernetes.io/rewrite-target: /$1
+      nginx.ingress.kubernetes.io/use-regex: "true"
+      nginx.ingress.kubernetes.io/rewrite-target: /$2
     host: ""
+    path: /api
+    pathType: ImplementationSpecific
   probes:
     liveness:
       path: /health
