--- a/infrastructure/mysql/Chart.yaml
+++ b/infrastructure/mysql/Chart.yaml
@@ -8,4 +8,4 @@ appVersion: "8.0"
 dependencies:
   - name: mysql
     version: 14.0.3
-    repository: https://charts.bitnami.com/bitnami
+    repository: "file://./charts/mysql"
