--- a/applications/backend/app/Dockerfile
+++ b/applications/backend/app/Dockerfile
@@ -4,3 +4,4 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
 COPY app.py .
+CMD ["gunicorn", "-b", "0.0.0.0:8081", "app:app"]
