--- a/applications/vyking-app/templates/frontend/deployment-service.yaml
+++ b/applications/vyking-app/templates/frontend/deployment-service.yaml
@@ -57,7 +57,7 @@ spec:
       volumes:
         - name: nginx-config
           configMap:
-            name: {{ .Release.Name }}-nginx-config
+            name: frontend-{{ .Release.Name }}-nginx-config
             items:
               - key: default.conf
                 path: default.conf
